2023-09-29T16:16:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6354231467 # 1221
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
* notice: last 14d: unq all: 4 4153
* notice: prev accum: outdated-unq outdated-all / unq all: 1710 161071 / 1746 165371
* notice: next accum: outdated-unq outdated-all / unq all: 1710 161071 / 1747 165464
* notice: prev exec diff / last date diff / accum: unq all: +1 +93 -0 -92 / +4 +206 -0 -0 / 4 206
* notice: removed / changed dates: [] / [2023-09-15 2023-09-29]

2023-09-29T08:16:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6348845400 # 1220
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
* notice: last 14d: unq all: 3 4152
* notice: prev accum: outdated-unq outdated-all / unq all: 1710 161071 / 1743 165258
* notice: next accum: outdated-unq outdated-all / unq all: 1710 161071 / 1746 165371
* notice: prev exec diff / last date diff / accum: unq all: +3 +113 -1 -116 / +3 +113 -0 -0 / 3 113
* notice: removed / changed dates: [] / [2023-09-15 2023-09-29]

2023-09-29T00:58:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6345894088 # 1219
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
* notice: last 14d: unq all: 3 4155
* notice: prev accum: outdated-unq outdated-all / unq all: 1709 161002 / 1743 165164
* notice: next accum: outdated-unq outdated-all / unq all: 1710 161071 / 1743 165258
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -32 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2023-09-14] / [2023-09-15 2023-09-28]

2023-09-28T16:17:16Z: