@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-17T01:01:34Z",
-  "count" : 299,
+  "timestamp" : "2023-09-30T00:57:34Z",
+  "count" : 249,
   "count_minmax" : [ 111, 299 ],
-  "count_decinc" : [ -0, +299 ],
+  "count_decinc" : [ -50, +299 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
