@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-09-29T16:16:34Z",
-  "count_outdated" : 161071,
-  "uniques_outdated" : 1710,
-  "count" : 165464,
+  "timestamp" : "2023-09-30T00:57:34Z",
+  "count_outdated" : 161351,
+  "uniques_outdated" : 1712,
+  "count" : 165560,
   "uniques" : 1747,
   "clones" : [
     {
-      "timestamp": "2023-09-15T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 280 ],
-      "count_decinc": [ 240, 280 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2023-09-16T00:00:00Z",
-      "count": 299,
+      "count": 249,
       "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 0, 299 ],
+      "count_decinc": [ 50, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 113, 206 ],
-      "count_decinc": [ 0, 206 ],
+      "count": 302,
+      "count_minmax": [ 113, 302 ],
+      "count_decinc": [ 0, 302 ],
       "uniques": 4,
       "uniques_minmax": [ 3, 4 ],
       "uniques_decinc": [ 0, 4 ]
