@@ -1,15 +1,10 @@
 {
-  "count": 4153,
+  "count": 4159,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2023-09-15T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-16T00:00:00Z",
-      "count": 299,
+      "count": 249,
       "uniques": 1
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 206,
+      "count": 302,
       "uniques": 4
     }
   ]
