@@ -1,3 +1,12 @@
+2023-09-30T00:57:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6358930202 # 1222
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
+* notice: last 14d: unq all: 4 4159
+* notice: prev accum: outdated-unq outdated-all / unq all: 1710 161071 / 1747 165464
+* notice: next accum: outdated-unq outdated-all / unq all: 1712 161351 / 1747 165560
+* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -50 / +4 +302 -0 -0 / 4 302
+* notice: removed / changed dates: [2023-09-15] / [2023-09-16 2023-09-29]
+
 2023-09-29T16:16:34Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6354231467 # 1221
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-29
